# restful-api

./: Makefile  README.md  pyproject.toml
.github/workflows/: app.yml
docker/: Dockerfile
src/homework/: main.py
tests/: test_.py  test_main.py
