[tool.poetry]
name = "hw-5"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["ilya <lystsov.ilya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
uvicorn = "0.23.2"
httpx = "^0.25.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
mypy = "^1.6.1"
pytest-randomly = "^3.15.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
